@@ -112,6 +112,12 @@
     Ride Crash
     </div>
     <div class="tab">
+    Ride Crash Mod 1
+    </div>
+    <div class="tab">
+    Crash Full 2
+    </div>
+    <div class="tab">
     Soft Shaker
     </div>
     Guitar
