@@ -1,4 +1,10 @@
-yoshimi 2.3.0 rc8
+yoshimi 2.3.0 rc9
+
+2023-5-24 Will
+bn 2233
+Added two drum souds from Lorenzo
+Some Dynfilter cleanups, but more needed later.
+Set version as 2.3.0 rc9
 
 2023-5-22 Will
 bn 2232
